Fix overflow at 500% zoom

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ a {
   justify-content: center;
   flex: 1 1 auto;
   width: 400px;
+  max-width: 90vw;
 }
 
 .this-website-is-awesome .title {
@@ -100,6 +101,10 @@ button {
   align-items: center;
 }
 
+
+.this-website-is-awesome img {
+  max-width: 90vw;
+}
 
 
 .container {
